--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
-# defaults file for unison
+# Files to be synchronized
+unison_include_files: []
+
+# Directories to be synchronized
+unison_include_directories: []
+
+# Paths not to synchronize (in the include dirrectories)
+unison_ignore_paths: []
