Switched to use Molecule to test role
Makes it easy to test locally during development.

Enhancement: resolves #6

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,24 @@
 ---
-- hosts: localhost
+- hosts: all
   remote_user: root
+
+  pre_tasks:
+    - name: create vagrant
+      become: yes
+      user:
+        name: vagrant
+        state: present
+        home: /home/vagrant
+        createhome: yes
+
+    - name: create vagrant shared directory
+      file:
+        path: /vagrant
+        state: directory
+        mode: 'u=rwx,go=rx'
+        owner: vagrant
+        group: vagrant
+
   roles:
     - role: ansible-role-unison
       unison_include_directories:
