Updated Molecule to 1.9.1
Keep up to date with all the latest fixes.

--- a/molecule.yml
+++ b/molecule.yml
@@ -10,3 +10,6 @@ docker:
   - name: ansible-role-unison-01
     image: ubuntu
     image_version: '16.04'
+
+testinfra:
+  hosts: ansible-role-unison-01
