--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,6 @@ unison_src_root: '/home/vagrant'
 
 # Path to root directory of mirrored files
 unison_mirror_root: '/vagrant/home'
+
+# Make Unison work with the limitations of the Windows file system
+unison_fat: yes
