Added support for Ansible 2.6
Need to specify the codename for the PPA.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
   become: yes
   apt_repository:
     repo: 'ppa:john-freeman/unison'
+    codename: '{{ ansible_distribution_release }}'
 
 - name: install unison
   become: yes
